# solana-voib-demo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
bandwidth-prepay-api/: Cargo.toml
bandwidth-prepay-api/src/: data.rs  instruction.rs  lib.rs
bandwidth-prepay-program/: Cargo.toml  do.sh
bandwidth-prepay-program/src/: lib.rs  processor.rs  result.rs  util.rs
bandwidth-tps/: Cargo.toml
bandwidth-tps/src/: bandwidth_tps.rs  cli.rs  main.rs
client/: Cargo.toml
client-tester/: Cargo.toml  setup.sh
client-tester/src/: main.rs
client/src/: bandwidth_client.rs
gatekeeper/: Cargo.toml  setup.sh
gatekeeper/src/: contract.rs  gatekeeper.rs  main.rs
loader/src/: index.js
provider-drone/: Cargo.toml
stream-video/: Cargo.toml  template-config.toml
stream-video/src/: cli.rs  gui.rs
web-client/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web-client/src/: app.js  app.tsx  broadcast.tsx  gatekeeper.ts  prepay.ts  stream.tsx  streamer.tsx  theme.ts  webrtc.ts
web-client/src/components/: navbar.tsx
web-client/types/@solana/: index.d.ts
web-client/types/mediasoup-client/: index.d.ts
