
# Note: This crate must be built using build.sh

[package]
name = "bandwidth-prepay"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bandwidth-prepay-api = { path = "../bandwidth-prepay-api" }
solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false }

[features]
program = ["solana-sdk/program"]
default = ["program"]

[lib]
name = "bandwidth_prepay"
crate-type = ["cdylib"]
