[package]
name = "bandwidth-tps"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
clap = "2.33.0"
env_logger = "0.6.1"
gatekeeper = { path = "../gatekeeper", version = "0.2.0" }
log = "0.4.6"
pubsub-client = { path = "../pubsub-client", version = "0.2.0" }
rand = "0.6.5"
rand_chacha = "0.1.1"
rayon = "1.2.0"
solana-bpf-loader-api = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-client = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-drone = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-logger = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-sdk = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }

[dev-dependencies]
solana-runtime = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
