[package]
name = "bandwidth-tps"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
clap = "2.33.0"
env_logger = "0.6.1"
gatekeeper = { path = "../gatekeeper", version = "0.2.0" }
log = "0.4.6"
pubsub-client = { path = "../pubsub-client", version = "0.2.0" }
rand = "0.6.5"
rand_chacha = "0.1.1"
rayon = "1.2.0"
solana-bpf-loader-api = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-client = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-drone = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-logger = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }

[dev-dependencies]
solana-runtime = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
# This hack works around https://github.com/solana-labs/solana/issues/5966 to
# produce dylib deps without a hash in the filename
solana-runtime-path = { path = "../../solana/runtime", version = "0.19.0-pre0", package = "solana-runtime" }
