[package]
name = "client"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
bs58 = "0.2.5"
log = "0.4.6"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
solana-client = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-drone = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-sdk = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
