[package]
name = "client"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
bs58 = "0.2.5"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
solana-client = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-drone = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
