[package]
name = "gatekeeper"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
bs58 = "0.2.5"
clap = "2.33.0"
env_logger = "0.6.1"
jsonrpc-core = "10.1"
jsonrpc-tcp-server = "10.1"
log = "0.4.6"
mio = "0.6.16"
pubsub-client = { path = "../pubsub-client", version = "0.2.0" }
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
solana-client = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-drone = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }
solana-sdk = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }

[dev-dependencies]
solana-runtime = { git = "https://github.com/jstarry/solana", branch = "native-loader-fix" }

[[bin]]
name = "gatekeeper"
path = "src/main.rs"

[[bin]]
name = "provider-account"
path = "bin/provider-pubsub.rs"
