[package]
name = "provider-drone"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
client = { path = "../client", version = "0.2.0" }
env_logger = "0.6.1"
log = "0.4.6"
solana-client = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-drone = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", version = "0.19.0-pre0" }
tokio = "0.1"
tokio-codec = "0.1"
